# shujutuomin

./: .gitignore  APPLICATION_RENAME_SUMMARY.md  BUILD_WITH_PYTHON_GUIDE.md  CheersAI-Vault-Installer.msi  CheersAI-Vault文件脱敏安全屋PRD_V1.3.md  CheersAI产品UI规范.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DEPLOY_OCR_PACKAGE.md  INSTALL_OCR.md  OCR_DOWNLOAD_GUIDE.md  OCR_IMPLEMENTATION_COMPLETE.md  OCR_IMPLEMENTATION_SUMMARY.md  OCR_PACKAGING.md  OCR_SETUP_GUIDE.md  README.md  build-with-icons.ps1  build_full.bat  build_full_with_python.bat  build_ocr.bat  build_ocr_with_python.bat  build_with_ocr.bat  compress_ocr.bat  convert-logo.ps1  final-build-solution.ps1  generate-icons.ps1  index.html  install_ocr_windows.bat  package.json  pnpm-lock.yaml  setup_embedded_python.bat  tailwind.config.js  test-masking.txt  test-regex.txt  test_data.csv  test_file_1.csv  test_file_3.md  test_filebay.ps1  test_filebay_api.ps1  test_filebay_connection.rs  test_markdown.md  (+3 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  cheersai-vault.db.backup  safer_b64.txt  tauri.conf.json
src-tauri/capabilities/: default.json  filebay-proxy.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: pdf_ocr.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: batch.rs  crypto.rs  database.rs  debug.rs  file_manager.rs  gitea.rs  masking.rs  mod.rs  ocr.rs  proxy.rs  rules.rs  sandbox.rs  unmask.rs  webview.rs
src-tauri/src/core/: batch.rs  crypto.rs  database.rs  dpapi.rs  file_manager.rs  file_parser.rs  gitea.rs  masking_engine.rs  mod.rs  ner.rs  rules.rs  sandbox.rs
test/: README.md
(+60 files in other folders)
