[package]
name = "cheersai-vault"
version = "0.1.0"
description = "CheersAI Vault - Secure Data Masking Desktop Application"
authors = ["CheersAI Team"]
edition = "2021"

[lib]
name = "cheersai_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
regex = "1"
csv = "1"
calamine = "0.24"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
once_cell = "1"
thiserror = "1"
anyhow = "1"
dirs-next = "2"
docx-rs = "0.4"
zip = "0.6"
quick-xml = "0.31"
pulldown-cmark = "0.9"
encoding_rs = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
